--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dev_dependencies:
   share_extend: ^2.0.0
   shared_preferences: ^2.0.6
   connectivity_plus: ^1.1.0
+  share_plus: ^4.0.4
+  flutter_svg: ^1.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
